ecmascript/parser/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6/input.ts:3:33
  |
3 | async function foo(a = await => await): Promise<void> {
  |                                 ^^^^^

